# T-and-E-training

./: .gitignore  README  pyproject.toml
frontend/CSS/block-elements-vs-inline-elements/: example.html  summary.md
frontend/CSS/box-model/: summary.md
frontend/CSS/chained-selectors/: summary.md
frontend/CSS/css-animations/: example.html  styles.css  summary.md
frontend/CSS/pseudo-classes/: example.html  summary.md
frontend/CSS/relative-size-measures/: summary.md
frontend/ui-ux/: summary.md
frontend/web-design/: summary.md
languages/python/: example.py
languages/python/basic-iterators-dictionaries/: notebook.ipynb
languages/python/basic-iterators-enumerate/: notebook.ipynb
languages/python/basic-iterators-range/: notebook.ipynb
languages/python/common-built-in-exceptions/: error-handling-program.py  notebook.ipynb
languages/python/eafp-versus-lbyl/: notebook.ipynb
languages/python/eafp-versus-lbyl/file/: example.txt
languages/python/equality-vs-identity/: list.py  notebook.ipynb
languages/python/fp-functools-partial-reduce/: notebook.ipynb
languages/python/list-dict-set-comprehensions/: comprehension.py  notebook.ipynb
languages/python/singleton-integers/: notebook.ipynb
languages/python/using-pip-requirements-pipenv/: notebook.ipynb
security/what-is-a-UUID-and-when-should-you-use-it/: generate-uuid.py  summary.md  test.txt
